--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="container">
             <div class="ms-auto col-12 col-md-7 ">
                 <h1 class="display-1 fw-bold my-5">
-                    Comidas del fin <br> del mundo
+                    Fotografias del fin <br> de Sudamerica
                 </h1>
                 <p class="my-5">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, accusamus iusto quibusdam
@@ -115,7 +115,7 @@
 
         <h2 class="display-4 fw-bold text-center text-light mb-3">Mis trabajos</h2>
 
-        <div class="row">
+        <div class="row">s
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
                     <div class="image-top" style="background-image: url(assets/img/card-1.jpg)"></div>
