cambio icono y alineacion de cards

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-success bg-gradient fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="assets/img/logo.png" class="img-fluid">
+                <img src='https://i.postimg.cc/TLnLhJyb/Screen-Shot-2022-04-13-at-23-12-26-1-2.png' border='0' alt="imagen brujula" class="img-fluid">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -115,7 +115,7 @@
 
         <h2 class="display-4 fw-bold text-center text-light mb-3">Mis trabajos</h2>
 
-        <div class="row">s
+        <div class="row">
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
                     <div class="image-top" style="background-image: url(assets/img/card-1.jpg)"></div>
