--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-success bg-gradient fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src='https://i.postimg.cc/TLnLhJyb/Screen-Shot-2022-04-13-at-23-12-26-1-2.png' border='0' alt="imagen brujula" class="img-fluid">
+                <a href="https://www.instagram.com/_cjrdc/" target="blank">
+                    <img src='https://i.postimg.cc/xjwPxd3R/instagram-1.png' class="img-fluid">
+                </a>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -79,7 +81,7 @@
         <div class="row">
             <div class="col-12 col-md-4">
                 <i class="fas fa-camera fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Fotógrafa de comida</h3>
+                <h3 class="my-3 fw-bold">Fotógrafo de paisajes</h3>
                 <p class="my-3">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                     eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
@@ -89,7 +91,7 @@
             </div>
             <div class="col-12 col-md-4">
                 <i class="fas fa-bullhorn fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Crítica culinaria</h3>
+                <h3 class="my-3 fw-bold">Digitalizado de rollos 35mm</h3>
                 <p class="my-3">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                     eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
@@ -99,7 +101,7 @@
             </div>
             <div class="col-12 col-md-4">
                 <i class="far fa-map fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Bloggera de viajes</h3>
+                <h3 class="my-3 fw-bold">Reseñas de viajes</h3>
                 <p class="my-3">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                     eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
