cambio de clase navbar-brand

--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-success bg-gradient fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">
-                <a href="https://www.instagram.com/_cjrdc/" target="blank">
-                    <img src='https://i.postimg.cc/xjwPxd3R/instagram-1.png' class="img-fluid">
+            <a class="navbar-brand justify-content-between" >
+                <a href="https://www.instagram.com/_cjrdc/" target="blank"> 
+                    <img src="https://i.postimg.cc/xjwPxd3R/instagram-1.png" >
                 </a>
-            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
